[gd_scene load_steps=4 format=2]

[ext_resource path="res://lobby/lobby.gd" type="Script" id=1]
[ext_resource path="res://lobby/buttongroup_address_type.tres" type="ButtonGroup" id=2]
[ext_resource path="res://lobby/lineedit_input.gd" type="Script" id=3]

[node name="main_menu" type="Node"]
script = ExtResource( 1 )

[node name="menu_container" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Panel" type="Panel" parent="menu_container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.5
margin_top = -135.0
margin_right = 199.5
margin_bottom = 135.0

[node name="vbox_container" type="VBoxContainer" parent="menu_container/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -184.5
margin_top = 15.0
margin_right = 184.5
margin_bottom = 177.0

[node name="label_title" type="Label" parent="menu_container/Panel/vbox_container"]
margin_right = 369.0
margin_bottom = 14.0
text = "TITLE"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="menu_container/Panel/vbox_container"]
margin_top = 18.0
margin_right = 369.0
margin_bottom = 22.0

[node name="hbox_tabs" type="HBoxContainer" parent="menu_container/Panel/vbox_container"]
editor/display_folded = true
margin_top = 26.0
margin_right = 369.0
margin_bottom = 46.0
alignment = 1

[node name="button_host" type="Button" parent="menu_container/Panel/vbox_container/hbox_tabs"]
margin_left = 38.0
margin_right = 185.0
margin_bottom = 20.0
text = "LOBBY_HOST_SERVER"

[node name="button_join" type="Button" parent="menu_container/Panel/vbox_container/hbox_tabs"]
margin_left = 189.0
margin_right = 330.0
margin_bottom = 20.0
text = "LOBBY_JOIN_SERVER"

[node name="spacer2" type="Label" parent="menu_container/Panel/vbox_container"]
margin_top = 50.0
margin_right = 369.0
margin_bottom = 64.0
custom_colors/font_color = Color( 1, 0.410156, 0.410156, 1 )
align = 1
valign = 1

[node name="host_container" type="VBoxContainer" parent="menu_container/Panel/vbox_container"]
editor/display_folded = true
margin_top = 68.0
margin_right = 369.0
margin_bottom = 242.0

[node name="grid_host" type="GridContainer" parent="menu_container/Panel/vbox_container/host_container"]
editor/display_folded = true
margin_right = 369.0
margin_bottom = 132.0
columns = 2

[node name="label_server_name" type="Label" parent="menu_container/Panel/vbox_container/host_container/grid_host"]
margin_top = 5.0
margin_right = 138.0
margin_bottom = 19.0
text = "LOBBY_SERVER_NAME"

[node name="text_server_name" type="LineEdit" parent="menu_container/Panel/vbox_container/host_container/grid_host"]
margin_left = 142.0
margin_right = 312.0
margin_bottom = 24.0
custom_constants/minimum_spaces = 40

[node name="label_address_type" type="Label" parent="menu_container/Panel/vbox_container/host_container/grid_host"]
margin_top = 47.0
margin_right = 138.0
margin_bottom = 61.0

[node name="VBoxContainer" type="VBoxContainer" parent="menu_container/Panel/vbox_container/host_container/grid_host"]
margin_left = 142.0
margin_top = 28.0
margin_right = 312.0
margin_bottom = 80.0
alignment = 2

[node name="checkbox_ipv4" type="CheckBox" parent="menu_container/Panel/vbox_container/host_container/grid_host/VBoxContainer"]
margin_right = 170.0
margin_bottom = 24.0
group = ExtResource( 2 )
text = "IPV4"

[node name="checkbox_ipv6" type="CheckBox" parent="menu_container/Panel/vbox_container/host_container/grid_host/VBoxContainer"]
margin_top = 28.0
margin_right = 170.0
margin_bottom = 52.0
group = ExtResource( 2 )
text = "IPV6"

[node name="label_address" type="Label" parent="menu_container/Panel/vbox_container/host_container/grid_host"]
margin_top = 87.0
margin_right = 138.0
margin_bottom = 101.0
text = "LOBBY_ADDRESS"

[node name="option_addresses" type="OptionButton" parent="menu_container/Panel/vbox_container/host_container/grid_host"]
margin_left = 142.0
margin_top = 84.0
margin_right = 312.0
margin_bottom = 104.0
shortcut_in_tooltip = false

[node name="label_port" type="Label" parent="menu_container/Panel/vbox_container/host_container/grid_host"]
margin_top = 113.0
margin_right = 138.0
margin_bottom = 127.0
text = "LOBBY_PORT"

[node name="text_port" type="LineEdit" parent="menu_container/Panel/vbox_container/host_container/grid_host"]
margin_left = 142.0
margin_top = 108.0
margin_right = 312.0
margin_bottom = 132.0
custom_constants/minimum_spaces = 40

[node name="label_error" type="Label" parent="menu_container/Panel/vbox_container/host_container"]
margin_top = 136.0
margin_right = 369.0
margin_bottom = 150.0
custom_colors/font_color = Color( 1, 0.410156, 0.410156, 1 )
align = 1
valign = 1

[node name="hbox_host_buttons" type="HBoxContainer" parent="menu_container/Panel/vbox_container/host_container"]
editor/display_folded = true
margin_top = 154.0
margin_right = 369.0
margin_bottom = 174.0
alignment = 2

[node name="button_cancel" type="Button" parent="menu_container/Panel/vbox_container/host_container/hbox_host_buttons"]
margin_left = 6.0
margin_right = 176.0
margin_bottom = 20.0
text = "LOBBY_BUTTON_CANCEL"

[node name="button_continue" type="Button" parent="menu_container/Panel/vbox_container/host_container/hbox_host_buttons"]
margin_left = 180.0
margin_right = 369.0
margin_bottom = 20.0
text = "LOBBY_BUTTON_CONTINUE"

[node name="join_container" type="VBoxContainer" parent="menu_container/Panel/vbox_container"]
editor/display_folded = true
visible = false
margin_top = 194.0
margin_right = 369.0
margin_bottom = 288.0

[node name="grid_join" type="GridContainer" parent="menu_container/Panel/vbox_container/join_container"]
margin_right = 369.0
margin_bottom = 52.0
columns = 2

[node name="label_ip_address" type="Label" parent="menu_container/Panel/vbox_container/join_container/grid_join"]
margin_top = 5.0
margin_right = 107.0
margin_bottom = 19.0
text = "LOBBY_ADDRESS"

[node name="text_ip_address" type="LineEdit" parent="menu_container/Panel/vbox_container/join_container/grid_join"]
margin_left = 111.0
margin_right = 281.0
margin_bottom = 24.0
custom_constants/minimum_spaces = 40

[node name="label_port" type="Label" parent="menu_container/Panel/vbox_container/join_container/grid_join"]
margin_top = 33.0
margin_right = 107.0
margin_bottom = 47.0
text = "LOBBY_PORT"

[node name="text_port" type="LineEdit" parent="menu_container/Panel/vbox_container/join_container/grid_join"]
margin_left = 111.0
margin_top = 28.0
margin_right = 281.0
margin_bottom = 52.0
custom_constants/minimum_spaces = 40

[node name="label_error" type="Label" parent="menu_container/Panel/vbox_container/join_container"]
margin_top = 56.0
margin_right = 369.0
margin_bottom = 70.0
custom_colors/font_color = Color( 1, 0.410156, 0.410156, 1 )
align = 1
valign = 1

[node name="hbox_join_buttons" type="HBoxContainer" parent="menu_container/Panel/vbox_container/join_container"]
margin_top = 74.0
margin_right = 369.0
margin_bottom = 94.0
alignment = 2

[node name="button_cancel" type="Button" parent="menu_container/Panel/vbox_container/join_container/hbox_join_buttons"]
margin_left = 13.0
margin_right = 183.0
margin_bottom = 20.0
text = "LOBBY_BUTTON_CANCEL"

[node name="button_connect" type="Button" parent="menu_container/Panel/vbox_container/join_container/hbox_join_buttons"]
margin_left = 187.0
margin_right = 369.0
margin_bottom = 20.0
text = "LOBBY_BUTTON_CONNECT"

[node name="lobby_container" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Panel" type="Panel" parent="lobby_container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 199.0
margin_bottom = 200.0

[node name="vbox_container" type="VBoxContainer" parent="lobby_container/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -184.5
margin_top = 15.0
margin_right = 185.5
margin_bottom = 67.0

[node name="label_title" type="Label" parent="lobby_container/Panel/vbox_container"]
margin_right = 370.0
margin_bottom = 14.0
text = "TITLE"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="lobby_container/Panel/vbox_container"]
margin_top = 18.0
margin_right = 370.0
margin_bottom = 22.0

[node name="label_container_title" type="Label" parent="lobby_container/Panel/vbox_container"]
margin_top = 26.0
margin_right = 370.0
margin_bottom = 40.0
text = "LOBBY_SERVER_TITLE"
align = 1
valign = 1

[node name="vbox_container" type="VBoxContainer" parent="lobby_container/Panel/vbox_container"]
margin_top = 44.0
margin_right = 370.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="lobby_container/Panel"]
margin_left = 15.0
margin_top = 65.0
margin_right = 108.0
margin_bottom = 79.0
text = "LOBBY_NAME"

[node name="Label2" type="Label" parent="lobby_container/Panel"]
margin_left = 268.0
margin_top = 65.0
margin_right = 368.0
margin_bottom = 79.0
text = "LOBBY_READY"
align = 2

[node name="itemlist_players" type="ItemList" parent="lobby_container/Panel"]
margin_left = 15.0
margin_top = 85.0
margin_right = 322.0
margin_bottom = 218.0
items = [ "Item 0", null, false, "Item 1", null, false, "Item 2", null, false, "Item 3", null, false, "Item 4", null, false, "Item 5", null, false, "Item 6", null, false ]

[node name="itemlist_players_ready" type="ItemList" parent="lobby_container/Panel"]
margin_left = 324.0
margin_top = 85.0
margin_right = 383.0
margin_bottom = 218.0
items = [ "Item 0", null, false, "Item 1", null, false, "Item 2", null, false, "Item 3", null, false, "Item 4", null, false, "Item 5", null, false, "Item 6", null, false ]

[node name="HSeparator" type="HSeparator" parent="lobby_container/Panel"]
margin_left = 15.0
margin_top = 220.0
margin_right = 385.0
margin_bottom = 224.0

[node name="text_chat" type="RichTextLabel" parent="lobby_container/Panel"]
margin_left = 14.0
margin_top = 227.0
margin_right = 384.0
margin_bottom = 321.0
scroll_following = true

[node name="HSeparator2" type="HSeparator" parent="lobby_container/Panel"]
margin_left = 14.0
margin_top = 324.0
margin_right = 384.0
margin_bottom = 328.0

[node name="line_chat" type="LineEdit" parent="lobby_container/Panel"]
margin_left = 14.0
margin_top = 335.0
margin_right = 347.0
margin_bottom = 359.0
script = ExtResource( 3 )

[node name="button_chat" type="Button" parent="lobby_container/Panel"]
margin_left = 354.0
margin_top = 335.0
margin_right = 385.0
margin_bottom = 359.0
text = "OK"

[node name="hbox_buttons" type="HBoxContainer" parent="lobby_container/Panel"]
editor/display_folded = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -379.0
margin_top = -34.0
margin_right = -14.0
margin_bottom = -14.0
alignment = 2

[node name="button_cancel" type="Button" parent="lobby_container/Panel/hbox_buttons"]
margin_left = 32.0
margin_right = 202.0
margin_bottom = 20.0
text = "LOBBY_BUTTON_CANCEL"

[node name="button_start" type="Button" parent="lobby_container/Panel/hbox_buttons"]
margin_left = 206.0
margin_right = 365.0
margin_bottom = 20.0
text = "LOBBY_BUTTON_START"
[connection signal="pressed" from="menu_container/Panel/vbox_container/hbox_tabs/button_host" to="." method="_on_button_host_pressed"]
[connection signal="pressed" from="menu_container/Panel/vbox_container/hbox_tabs/button_join" to="." method="_on_button_join_pressed"]
[connection signal="focus_exited" from="menu_container/Panel/vbox_container/host_container/grid_host/text_server_name" to="." method="_on_host_text_server_name_focus_exited"]
[connection signal="pressed" from="menu_container/Panel/vbox_container/host_container/grid_host/VBoxContainer/checkbox_ipv4" to="." method="_on_checkbox_ipv4_pressed"]
[connection signal="pressed" from="menu_container/Panel/vbox_container/host_container/grid_host/VBoxContainer/checkbox_ipv6" to="." method="_on_checkbox_ipv6_pressed"]
[connection signal="item_selected" from="menu_container/Panel/vbox_container/host_container/grid_host/option_addresses" to="." method="_on_option_addresses_item_selected"]
[connection signal="focus_exited" from="menu_container/Panel/vbox_container/host_container/grid_host/text_port" to="." method="_on_host_text_port_focus_exited"]
[connection signal="pressed" from="menu_container/Panel/vbox_container/host_container/hbox_host_buttons/button_cancel" to="." method="_on_button_cancel_pressed"]
[connection signal="pressed" from="menu_container/Panel/vbox_container/host_container/hbox_host_buttons/button_continue" to="." method="_on_host_button_continue_pressed"]
[connection signal="focus_exited" from="menu_container/Panel/vbox_container/join_container/grid_join/text_ip_address" to="." method="_on_join_text_ip_address_focus_exited"]
[connection signal="focus_exited" from="menu_container/Panel/vbox_container/join_container/grid_join/text_port" to="." method="_on_join_text_port_focus_exited"]
[connection signal="pressed" from="menu_container/Panel/vbox_container/join_container/hbox_join_buttons/button_cancel" to="." method="_on_button_cancel_pressed"]
[connection signal="pressed" from="menu_container/Panel/vbox_container/join_container/hbox_join_buttons/button_connect" to="." method="_on_join_button_connect_pressed"]
[connection signal="item_selected" from="lobby_container/Panel/itemlist_players_ready" to="." method="_on_itemlist_players_ready_item_selected"]
[connection signal="text_entered" from="lobby_container/Panel/line_chat" to="." method="_on_lobby_line_chat_text_entered"]
[connection signal="pressed" from="lobby_container/Panel/button_chat" to="." method="_on_lobby_button_chat_pressed"]
[connection signal="pressed" from="lobby_container/Panel/hbox_buttons/button_cancel" to="." method="_on_lobby_button_cancel_pressed"]
[connection signal="pressed" from="lobby_container/Panel/hbox_buttons/button_start" to="." method="_on_lobby_button_start_pressed"]
